[package]
name = "slapjack"
version = "0.1.0"
edition = "2021"
authors = ["SeedyROM (Zack Kollar) <me@seedyrom.io>"]
license = "GPL-3.0-or-later"
homepage = "https://youtu.be/dQw4w9WgXcQ"
description = "Integrate faust and nih_plug"

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib"]

[dependencies]
# Remove the `assert_process_allocs` feature to allow allocations on the audio
# thread in debug builds.
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = [
    "assert_process_allocs",
] }
# Uncomment the below line to disable the on-by-default VST3 feature to remove
# the GPL compatibility requirement
# nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", default-features = false, features = ["assert_process_allocs"] }

faust-state = { git = "https://github.com/Frando/rust-faust.git", branch = "main" }
faust-types = { git = "https://github.com/Frando/rust-faust.git", branch = "main" }

[build-dependencies]
faust-build = { git = "https://github.com/Frando/rust-faust.git", branch = "main" }

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
